# picrs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
proto/: service.proto
src/: errors.rs  main.rs
src/processor/: mod.rs
